standalone_blackhole_lgd_sandbox/.intermediate/open_url/attempt_0/execution_log.txt
  File "/fs-computility-new/UPDZ02_sunhe/shared/QA_yixuan/standalone_blackhole_lgd_sandbox/test_open_url.py", line 1
    ```python
    ^
SyntaxError: invalid syntax
